syntax = "proto3";
package pb;
option go_package = "./";

message ManIdentity{
	string 	ipfsDir	 = 1;
	string	StoreDir = 2;
}
